' Database modelisation – BDS campaign platform
' Multiple focused diagrams in one file to keep them readable.

' ============================================
' 1) Identity & Access
' ============================================
@startuml Identity_Access
skinparam classAttributeIconSize 0
hide circle
left to right direction
title Identity & Access

entity users {
  * id : BIGINT <<PK>>
  --
  * university_email : VARCHAR(255)
    display_name : VARCHAR(255)
    avatar_url : VARCHAR(500)
  * is_active : BOOLEAN
    last_login_at : TIMESTAMP
    remember_token : VARCHAR(100)
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity roles {
  * id : BIGINT <<PK>>
  --
  * name : VARCHAR(100)
    description : TEXT
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity user_roles {
  * user_id : BIGINT <<FK>>
  * role_id : BIGINT <<FK>>
}

entity login_codes {
  * id : BIGINT <<PK>>
  --
  * user_id : BIGINT <<FK>>
  * code_hash : VARCHAR(255)
  * expires_at : TIMESTAMP
    used_at : TIMESTAMP
  * attempt_count : INT
    ip_address : VARCHAR(45)
    user_agent : VARCHAR(500)
  --
  * created_at : TIMESTAMP
}

users ||--o{ user_roles : user_id
roles ||--o{ user_roles : role_id

users ||--o{ login_codes : user_id

@enduml


' ============================================
' 2) Activities
' ============================================
@startuml Activities
skinparam classAttributeIconSize 0
hide circle
left to right direction
title Activities

entity users {
  * id : BIGINT <<PK>>
  --
  * university_email : VARCHAR(255)
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity activities {
  * id : BIGINT <<PK>>
  --
  * title : VARCHAR(255)
  * slug : VARCHAR(255)
  * points_label : VARCHAR(50)
    description : TEXT
  * mode : VARCHAR(20)
  * is_active : BOOLEAN
    created_by_id : BIGINT <<FK>>
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity activity_admins {
  * id : BIGINT <<PK>>
  --
  * activity_id : BIGINT <<FK>>
  * admin_id : BIGINT <<FK>>
  --
  * created_at : TIMESTAMP
}

entity activity_participants {
  * id : BIGINT <<PK>>
  --
  * activity_id : BIGINT <<FK>>
  * user_id : BIGINT <<FK>>
    created_by_id : BIGINT <<FK>>
  --
  * created_at : TIMESTAMP
}

entity activity_teams {
  * id : BIGINT <<PK>>
  --
  * activity_id : BIGINT <<FK>>
  * title : VARCHAR(150)
    created_by_id : BIGINT <<FK>>
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity activity_team_members {
  * id : BIGINT <<PK>>
  --
  * team_id : BIGINT <<FK>>
  * user_id : BIGINT <<FK>>
    created_by_id : BIGINT <<FK>>
  --
  * created_at : TIMESTAMP
}

' relations
users ||--o{ activities : created_by_id
activities ||--o{ activity_admins : activity_id
users ||--o{ activity_admins : admin_id
activities ||--o{ activity_participants : activity_id
users ||--o{ activity_participants : user_id
users ||--o{ activity_participants : created_by_id
activities ||--o{ activity_teams : activity_id
users ||--o{ activity_teams : created_by_id
activity_teams ||--o{ activity_team_members : team_id
users ||--o{ activity_team_members : user_id
users ||--o{ activity_team_members : created_by_id

@enduml


' ============================================
' 3) Points & Allos
' ============================================
@startuml Points_Allos
skinparam classAttributeIconSize 0
hide circle
left to right direction
title Points & Allos

entity users {
  * id : BIGINT <<PK>>
  --
  * university_email : VARCHAR(255)
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity activities {
  * id : BIGINT <<PK>>
  --
  * title : VARCHAR(255)
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity point_transactions {
  * id : BIGINT <<PK>>
  --
  * user_id : BIGINT <<FK>>
  * amount : INT
  * reason : VARCHAR(255)
    context_type : VARCHAR(50)
    context_id : BIGINT
    activity_id : BIGINT <<FK>>
    created_by_id : BIGINT <<FK>>
  --
  * created_at : TIMESTAMP
}

entity allos {
  * id : BIGINT <<PK>>
  --
  * title : VARCHAR(255)
    slug : VARCHAR(255)
    description : TEXT
  * points_cost : INT
  * status : VARCHAR(20)
  * window_start_at : TIMESTAMP
  * window_end_at : TIMESTAMP
  * slot_duration_minutes : INT
  --
  * created_by_id : BIGINT <<FK>>
    updated_by_id : BIGINT <<FK>>
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity allo_admins {
  * id : BIGINT <<PK>>
  --
  * allo_id : BIGINT <<FK>>
  * admin_id : BIGINT <<FK>>
  --
  * created_at : TIMESTAMP
}

entity allo_slots {
  * id : BIGINT <<PK>>
  --
  * allo_id : BIGINT <<FK>>
  * slot_start_at : TIMESTAMP
  * slot_end_at : TIMESTAMP
  * status : VARCHAR(20)
  --
  * created_at : TIMESTAMP
}

entity allo_usages {
  * id : BIGINT <<PK>>
  --
  * allo_id : BIGINT <<FK>>
  * allo_slot_id : BIGINT <<FK>>
  * slot_start_at : TIMESTAMP
  * user_id : BIGINT <<FK>>
  * points_spent : INT
  * status : VARCHAR(20)
    handled_by_id : BIGINT <<FK>>
    done_by_id : BIGINT <<FK>>
  --
  * created_at : TIMESTAMP
    accepted_at : TIMESTAMP
    done_at : TIMESTAMP
    cancelled_at : TIMESTAMP
}

' relations
users ||--o{ point_transactions : user_id
users ||--o{ point_transactions : created_by_id
activities ||--o{ point_transactions : activity_id

users ||--o{ allos : created_by_id
users ||--o{ allos : updated_by_id

allos ||--o{ allo_admins : allo_id
users ||--o{ allo_admins : admin_id

allos ||--o{ allo_slots : allo_id

allos ||--o{ allo_usages : allo_id
allo_slots ||--o{ allo_usages : allo_slot_id
users ||--o{ allo_usages : user_id
users ||--o{ allo_usages : handled_by_id
users ||--o{ allo_usages : done_by_id

@enduml


' ============================================
' 4) Events & Gallery
' ============================================
@startuml Events_Gallery
skinparam classAttributeIconSize 0
hide circle
left to right direction
title Events & Gallery

entity users {
  * id : BIGINT <<PK>>
  --
  * university_email : VARCHAR(255)
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity event_categories {
  * id : BIGINT <<PK>>
  --
  * name : VARCHAR(100)
  * slug : VARCHAR(100)
    description : TEXT
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity events {
  * id : BIGINT <<PK>>
  --
    category_id : BIGINT <<FK>>
  * title : VARCHAR(255)
  * slug : VARCHAR(255)
    description : TEXT
  * start_at : TIMESTAMP
    end_at : TIMESTAMP
    location : VARCHAR(255)
    cover_image_url : VARCHAR(500)
  * is_published : BOOLEAN
  --
  * created_by_id : BIGINT <<FK>>
    updated_by_id : BIGINT <<FK>>
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity media_items {
  * id : BIGINT <<PK>>
  --
  * event_id : BIGINT <<FK>>
  * uploader_id : BIGINT <<FK>>
  * file_url : VARCHAR(500)
    thumbnail_url : VARCHAR(500)
    title : VARCHAR(255)
    caption : TEXT
  * media_type : VARCHAR(20)
  * position : INT
  * is_visible : BOOLEAN
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

event_categories ||--o{ events : category_id
users ||--o{ events : created_by_id
users ||--o{ events : updated_by_id

events ||--o{ media_items : event_id
users ||--o{ media_items : uploader_id

@enduml


' ============================================
' 5) Shop
' ============================================
@startuml Shop
skinparam classAttributeIconSize 0
hide circle
left to right direction
title Shop (catalog only)

entity shop_categories {
  * id : BIGINT <<PK>>
  --
  * name : VARCHAR(150)
  * slug : VARCHAR(150)
    description : TEXT
  * position : INT
  * is_visible : BOOLEAN
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity products {
  * id : BIGINT <<PK>>
  --
  * category_id : BIGINT <<FK>>
  * title : VARCHAR(255)
  * slug : VARCHAR(255)
    description : TEXT
  * image_url : VARCHAR(500)
  * display_style : VARCHAR(20)
    badge_text : VARCHAR(50)
  * is_visible : BOOLEAN
  * position : INT
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

shop_categories ||--o{ products : category_id

@enduml


' ============================================
' 6) Team
' ============================================
@startuml Team
skinparam classAttributeIconSize 0
hide circle
left to right direction
title Team & poles

entity users {
  * id : BIGINT <<PK>>
  --
  * university_email : VARCHAR(255)
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity poles {
  * id : BIGINT <<PK>>
  --
  * name : VARCHAR(150)
  * slug : VARCHAR(150)
    description : TEXT
    icon_name : VARCHAR(100)
  * position : INT
  * is_visible : BOOLEAN
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity team_members {
  * id : BIGINT <<PK>>
  --
  * pole_id : BIGINT <<FK>>
    user_id : BIGINT <<FK>>
  * full_name : VARCHAR(255)
    nickname : VARCHAR(100)
    bio : TEXT
    photo_url : VARCHAR(500)
    instagram_url : VARCHAR(255)
  * position : INT
  * is_visible : BOOLEAN
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

poles ||--o{ team_members : pole_id
users ||--o{ team_members : user_id

@enduml


' ============================================
' 7) Audit
' ============================================
@startuml Audit
skinparam classAttributeIconSize 0
hide circle
left to right direction
title Audit logs

entity users {
  * id : BIGINT <<PK>>
  --
  * university_email : VARCHAR(255)
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity audit_logs {
  * id : BIGINT <<PK>>
  --
  * actor_id : BIGINT <<FK>>
  * action : VARCHAR(100)
  * entity_type : VARCHAR(100)
    entity_id : BIGINT
    description : VARCHAR(255)
    metadata_json : TEXT
    ip_address : VARCHAR(45)
    user_agent : VARCHAR(500)
  --
  * created_at : TIMESTAMP
}

users ||--o{ audit_logs : actor_id

@enduml


' ============================================
' 8) Challenges
' ============================================
@startuml Challenges
skinparam classAttributeIconSize 0
hide circle
left to right direction
title Challenges & daily games

entity users {
  * id : BIGINT <<PK>>
  --
  * university_email : VARCHAR(255)
  --
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity challenges {
  * id : BIGINT <<PK>>
  --
  * title : VARCHAR(255)
  * slug : VARCHAR(255)
    description : TEXT
  * challenge_type : VARCHAR(20)
    label_tag : VARCHAR(50)
    question_text : TEXT
    action_target_label : VARCHAR(255)
    expected_answer_text : VARCHAR(255)
  * points_reward : INT
  * requires_proof : BOOLEAN
  * is_active : BOOLEAN
    starts_at : TIMESTAMP
    ends_at : TIMESTAMP
  --
  * created_by_id : BIGINT <<FK>>
    updated_by_id : BIGINT <<FK>>
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity challenge_options {
  * id : BIGINT <<PK>>
  --
  * challenge_id : BIGINT <<FK>>
    label : VARCHAR(10)
  * text : VARCHAR(255)
  * is_correct : BOOLEAN
  * position : INT
  --
  * created_at : TIMESTAMP
}

entity challenge_attempts {
  * id : BIGINT <<PK>>
  --
  * challenge_id : BIGINT <<FK>>
  * user_id : BIGINT <<FK>>
    selected_option_id : BIGINT <<FK>>
    answer_text : TEXT
    proof_url : VARCHAR(500)
  * status : VARCHAR(20)
  * auto_checked : BOOLEAN
    reviewed_by_id : BIGINT <<FK>>
    reviewed_at : TIMESTAMP
  * points_awarded : INT
  --
  * created_at : TIMESTAMP
}

users ||--o{ challenges : created_by_id
users ||--o{ challenges : updated_by_id

challenges ||--o{ challenge_options : challenge_id

challenges ||--o{ challenge_attempts : challenge_id
users ||--o{ challenge_attempts : user_id
challenge_options ||--o{ challenge_attempts : selected_option_id
users ||--o{ challenge_attempts : reviewed_by_id

@enduml
